test/good/functions/placeholder01.px

func f(_: Int, _: Int, c: Int): Int def
    return c

print f(1, 2, 3)
