test/bad/generics/variadic01.px

func f(...args) def
    return

f(1, '2')
